--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <title>Todo by Yurkov</title>
 </head>
 <body>
+    <!-- TODO: You will have to move everything except header to script file -->
     <header class="header">
         <h1>todos</h1>
     </header>
