--- a/index.html
+++ b/index.html
@@ -8,30 +8,7 @@
     <title>Todo by Yurkov</title>
 </head>
 <body>
-    <header class="header">
-        <h1>todos</h1>
-    </header>
-
-    <main class="content">
-        <div class="arrow"></div>
-        <input type="text" placeholder="What needs to be done?">
-    </main>
-
-    <footer class="footer">
-        <div class="counter">
-            <div class="counter-item">0</div>
-            <p>items left</p>
-        </div>
-
-        <div class="buttons">
-            <button>All</button>
-            <button>Active</button>
-            <button>Completed</button>
-        </div>
-
-        <div class="clear">Clear completed<a href="#"></a></div>
-    </footer>
-
+    <div class="wrapper"></div>
     <script src="./script.js"></script>
 </body>
 </html>
